# cmake-template

./: .clang-format  CMakeLists.txt  build.sh
src/: main.cpp
